--- a/Instagram/index.html
+++ b/Instagram/index.html
@@ -18,7 +18,7 @@
                         <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
                     </div>
                     <a href="#" class="instagram-login"> Continue as anametin</a>
-                    <a href="#" class="instagram logout" >Account remove</a>
+                    <a href="#" class="instagram-logout" >Account remove</a>
                     </div>
                     <div class="group">
                         <p class="not-account">Are you not anametin?</p>
