--- a/Snake Game/index.html
+++ b/Snake Game/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
     <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +9,7 @@
        <title>Snake Game</title>
     </head>
     <body>
+        <h1>SNAKE GAME</h1>
         <canvas id="snake" width="512" height="512"></canvas>
     </body>
 </html>
