--- a/Netflix Intarface/Index.html
+++ b/Netflix Intarface/Index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <script src="https://kit.fontawesome.com/2fdb536abe.js" crossorigin="anonymous"></script>
     <title>NETFLIX INTERFACE</title>
 </head>
 <body>
@@ -23,17 +24,22 @@
         <div class="filme-principal">
             <div class="container">
                 <h3 class="titulo">Avatar:O Caminho da Água</h3>
-                <p class="descricao">Aonde nós formos, esta família é a nossa fortaleza. 12 anos depois de explorar Pandora e se juntar aos Na'vi, Jake Sully formou uma família com Neytiri e se estabeleceu entre os clãs do novo mundo. Porém, a paz não durará para sempre.</p>
+                <p class="descricao">Aonde nós formos, esta família é a nossa fortaleza. <br> 12 anos depois de explorar Pandora e se juntar aos Na'vi, Jake Sully formou uma família com Neytiri e se estabeleceu entre os clãs do novo mundo. Porém, a paz não durará para sempre.</p>
                 <div class="botoes">
                     <button role="button" class="botao">
+                        <i class="fa-solid fa-play"></i>
                         ASSITIR AGORA
                     </button>
                     <button role="button" class="botao">
+                        <i class="fa-solid fa-circle-info"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
             </div>
         </div>
     </main>
+
+
+
 </body>
 </html>
